Fix table id alignment issue

--- a/resources/assets/admin/styles/_table.scss
+++ b/resources/assets/admin/styles/_table.scss
@@ -3,8 +3,12 @@
     box-shadow: 0px 1px 3px rgba(30, 31, 33, 0.08);
     padding: 0.625rem 1.5rem;
     background-color: $white;
-    .el-table_1_column_1{
-        vertical-align: top;
+    .el-table__row{
+        td{
+           &:first-child{
+                vertical-align: top;
+           }
+        }
     }
     table,
     .el-table__empty-block {
@@ -124,6 +128,13 @@
     box-shadow: 0px 1px 3px rgba(30, 31, 33, 0.08);
     padding: 0.625rem 1.5rem;
     background-color: $white;
+    .el-table__row{
+        td{
+           &:first-child{
+                vertical-align: top;
+           }
+        }
+    }
     .el-table{
         background-color: transparent;
     }
